samples/_failures_safe/1761040093_313f99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d61cb10f.c: In function ‘graph_dijkstra’:
./samples/SAFE/__tmp_d61cb10f.c:159: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_d61cb10f.c:158:5: error: expected declaration or statement at end of input
  158 |     int visited[MAX_NODES
      |     ^~~
